standardized header and footer

--- a/about-us.html
+++ b/about-us.html
@@ -127,7 +127,8 @@ to all their fundraising events. It is a small way we can repay our “Corporate
   <div class="footer-address">
     <p>409 Industrial Ave, Vancouver, BC, V6A 2P8</p>
     <p>Telephone: 604 731 2490</p>
-    <a href="mailto:sales@secondstage.com"><p>sales@secondstage.com</p></a> 
+    
+    <a class="footer-link" href="mailto:sales@secondstage.com">sales@secondstage.com</a> <a class="footer-link" href="https://www.facebook.com/SecondStageManagement"><img class="facebook" src="img/facebook.png"></a>
   </div>
 </div>
 </footer>
@@ -167,7 +168,7 @@ to all their fundraising events. It is a small way we can repay our “Corporate
         play: {
           active: true,
           auto: true,
-          interval: 4000,
+          interval: 9000,
           swap: true
         }
       });
